new command "python3 tests/run.py"

--- a/tests/solution/Dockerfile
+++ b/tests/solution/Dockerfile
@@ -1,11 +1,7 @@
 FROM python:3.9-slim
 
-# Copying requirements file and installing dependencies
-COPY requirements.txt /tmp/
-RUN pip install --no-cache-dir -r /tmp/requirements.txt
-
-# Copying the rest of the application files
 COPY . .
 
-# Setting the default command to run the application
+RUN pip3 install -r requirements.txt
+
 CMD ["python", "app.py"]
